feat(frontend): implement reactive Vue.js presentation layer with clean architecture
Technical implementation:
- Vue 3 Composition API for reactive state management
- Clean separation: components (UI)  services (business)  repositories (data)
- Domain-driven design with Transfer entity and Money value object
- SOLID principles: single responsibility components, dependency injection
- Reactive forms with real-time validation and fee calculation
- HTTP client abstraction for testable API integration

Architecture benefits:
- Testable components through clear separation of concerns
- Framework-agnostic business logic in service layer
- Dependency inversion with repository interfaces
- Component reusability and maintainability
- Type-safe value objects with business rules

Quality assurance:
- Defensive programming with input validation
- Error handling with user-friendly feedback
- Responsive design with modern CSS Grid/Flexbox
- Performance optimization with reactive updates only

Code structure follows Uncle Bob's principles without explicit naming,
maintaining clean interfaces and proper abstraction levels.

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,14 @@ dependency-reduced-pom.xml
 .project
 .classpath
 
+# Frontend - Node.js
+frontend/node_modules/
+frontend/npm-debug.log*
+frontend/yarn-debug.log*
+frontend/yarn-error.log*
+frontend/dist/
+frontend/build/
+
 # OS
 .DS_Store
 Thumbs.db
