fix: remove emojis from system documentation and code
Professional code standards compliance:
- Removed emojis from GitHub Actions workflow notifications
- Cleaned up deployment guide documentation formatting
- Maintained professional technical documentation standards
- Ensured corporate policy compliance for emoji usage

Changes:
- Updated Slack notification message in CI/CD pipeline
- Standardized section headers in deployment documentation
- Preserved all technical content and functionality
- Applied consistent professional formatting

Code quality maintained while ensuring compliance with
enterprise documentation standards and policies.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -230,7 +230,7 @@ jobs:
       uses: 8398a7/action-slack@v3
       with:
         status: ${{ job.status }}
-        text: "🚀 SchedBank Production Deployment: ${{ job.status }}"
+        text: "SchedBank Production Deployment: ${{ job.status }}"
       env:
         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
 
