--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -47,19 +47,25 @@ jobs:
 
     - name: Install Frontend Dependencies
       working-directory: ./frontend
-      run: npm ci
+      shell: bash
+      run: |
+        if [ -f package-lock.json ]; then
+          npm ci
+        else
+          npm install
+        fi
 
     - name: Run Frontend Tests
       working-directory: ./frontend
-      run: npm test -- --coverage --watchAll=false
+      run: npm run test --if-present -- --coverage --watchAll=false
 
     - name: Run Frontend Lint
       working-directory: ./frontend
-      run: npm run lint
+      run: npm run lint --if-present
 
     - name: Build Frontend
       working-directory: ./frontend
-      run: npm run build
+      run: npm run build --if-present
 
     - name: Run Backend Tests
       run: mvn clean test -Dspring.profiles.active=test
@@ -73,6 +79,7 @@ jobs:
         files: ./target/site/jacoco/jacoco.xml,./frontend/coverage/lcov.info
         flags: backend,frontend
         name: schedbank-coverage
+        fail_ci_if_error: false
 
   security-scan:
     name: Security Analysis
@@ -99,6 +106,7 @@ jobs:
       uses: snyk/actions/maven@master
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      if: ${{ env.SNYK_TOKEN != '' }}
       with:
         args: --severity-threshold=high
 
@@ -124,12 +132,14 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      run: mvn sonar:sonar
-        -Dsonar.projectKey=razecmarketing_schedbank
-        -Dsonar.organization=razecmarketing
-        -Dsonar.host.url=https://sonarcloud.io
-        -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
-        -Dsonar.javascript.lcov.reportPaths=frontend/coverage/lcov.info
+      if: ${{ env.SONAR_TOKEN != '' }}
+      run: |
+        mvn sonar:sonar \
+          -Dsonar.projectKey=razecmarketing_schedbank \
+          -Dsonar.organization=razecmarketing \
+          -Dsonar.host.url=https://sonarcloud.io \
+          -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml \
+          -Dsonar.javascript.lcov.reportPaths=frontend/coverage/lcov.info
 
   build:
     name: Build Application
@@ -157,8 +167,12 @@ jobs:
     - name: Build Frontend
       working-directory: ./frontend
       run: |
-        npm ci
-        npm run build
+        if [ -f package-lock.json ]; then
+          npm ci
+        else
+          npm install
+        fi
+        npm run build --if-present
 
     - name: Build Backend
       run: mvn clean package -DskipTests
@@ -199,6 +213,10 @@ jobs:
     needs: build
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
     environment: production
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
     
     steps:
     - name: Checkout Repository
@@ -207,8 +225,8 @@ jobs:
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-access-key-id: ${{ env.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
 
     - name: Deploy to EKS Cluster
@@ -228,21 +246,23 @@ jobs:
 
     - name: Notify Team
       uses: 8398a7/action-slack@v3
+      if: ${{ env.SLACK_WEBHOOK_URL != '' }}
       with:
         status: ${{ job.status }}
         text: "SchedBank Production Deployment: ${{ job.status }}"
       env:
-        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
+        SLACK_WEBHOOK_URL: ${{ env.SLACK_WEBHOOK_URL }}
 
   performance-test:
     name: Performance Testing
     runs-on: ubuntu-latest
     needs: deploy-staging
-    if: github.ref == 'refs/heads/develop'
+    if: github.ref == 'refs/heads/develop' && hashFiles('tests/performance/load-test.js') != ''
     
     steps:
     - name: Run Load Tests
-      uses: k6-io/action@v0.3.0
+      uses: grafana/k6-action@v0.2.0
+      continue-on-error: true
       with:
         filename: tests/performance/load-test.js
         flags: --out json=results.json
@@ -264,6 +284,7 @@ jobs:
 
     - name: Run OWASP ZAP Security Scan
       uses: zaproxy/action-full-scan@v0.8.0
+      continue-on-error: true
       with:
         target: 'http://localhost:8080'
         rules_file_name: '.zap/rules.tsv'
