--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -224,18 +224,21 @@ jobs:
 
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v4
+      if: ${{ env.AWS_ACCESS_KEY_ID != '' && env.AWS_SECRET_ACCESS_KEY != '' }}
       with:
         aws-access-key-id: ${{ env.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
 
     - name: Deploy to EKS Cluster
+      if: ${{ env.AWS_ACCESS_KEY_ID != '' && env.AWS_SECRET_ACCESS_KEY != '' }}
       run: |
         aws eks update-kubeconfig --name schedbank-prod-cluster
         kubectl apply -f k8s/
         kubectl rollout status deployment/schedbank-app -n schedbank-prod --timeout=300s
 
     - name: Run Production Health Checks
+      if: ${{ env.AWS_ACCESS_KEY_ID != '' && env.AWS_SECRET_ACCESS_KEY != '' }}
       run: |
         # Wait for deployment to be ready
         sleep 60
@@ -257,10 +260,11 @@ jobs:
     name: Performance Testing
     runs-on: ubuntu-latest
     needs: deploy-staging
-    if: github.ref == 'refs/heads/develop' && hashFiles('tests/performance/load-test.js') != ''
+    if: github.ref == 'refs/heads/develop'
     
     steps:
     - name: Run Load Tests
+      id: k6
       uses: grafana/k6-action@v0.2.0
       continue-on-error: true
       with:
@@ -268,6 +272,7 @@ jobs:
         flags: --out json=results.json
 
     - name: Upload Performance Results
+      if: steps.k6.outcome == 'success'
       uses: actions/upload-artifact@v4
       with:
         name: performance-results
