--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "vite --host 127.0.0.1 --port 5173",
-    "dev": "vite --host 127.0.0.1 --port 5173", 
-    "build": "vite build",
-    "preview": "vite preview"
+    "start": "npx vite --host 127.0.0.1 --port 5173",
+    "dev": "npx vite --host 127.0.0.1 --port 5173", 
+    "build": "npx vite build",
+    "preview": "npx vite preview"
   },
   "dependencies": {
     "axios": "^1.12.1",
